--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,17 @@ name: Docker Image CI
 
 on:
   push:
+    branches:
+      - 'main' # main 分支推送代码时触发
+      - 'test' # test 分支推送代码时触发
     tags:
-      - 'v*.*.*'
-  workflow_dispatch:
+      - 'v*.*.*' # Git Tag 推送时触发
+  workflow_dispatch: # 手动触发
+    inputs:
+      branch: # 允许用户手动输入要构建的分支名
+        description: 'Branch to build (e.g., main, test)'
+        required: false
+        default: 'main' # 【关键修正】将默认值改为静态字符串 'main'
 
 jobs:
   build-and-push:
@@ -17,11 +25,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         
-      - name: Download and extract camoufox dependency
-        run: |
-          wget https://github.com/daijro/camoufox/releases/download/v135.0.1-beta.24/camoufox-135.0.1-beta.24-lin.x86_64.zip
-          unzip camoufox-135.0.1-beta.24-lin.x86_64.zip -d camoufox-linux
-          
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -35,10 +38,11 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            # 【建议新增】始终创建一个 latest 标签，指向最新的版本发布
-            type=raw,value=latest
+            type=ref,event=branch
+            type=ref,event=tag
+            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            type=raw,value=${{ github.event.inputs.branch }},enable=${{ github.event_name == 'workflow_dispatch' }}
+          labels: ${{ steps.meta.outputs.labels }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -47,8 +51,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          # 【已移除】不再指定 platforms，让它只构建默认的 amd64
-          # 【新增】禁用 provenance 和 sbom，确保生成传统的、兼容性最强的镜像格式
           provenance: false
           sbom: false
           push: true
