--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -47,11 +47,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Download Camoufox artifact
+        run: curl -sSL ${{ secrets.CAMOUFOX_URL }} -o camoufox-linux.tar.gz
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          build-args: CAMOUFOX_URL=${{ secrets.CAMOUFOX_URL }}
           provenance: false
           sbom: false
           push: true
